# pico2w-tfm-exmaple

./: .gitignore  CMakeLists.txt  README.md  main.c  syscalls_stub.c
app/: CMakeLists.txt
app/sum_client_ns_app/: CMakeLists.txt  main_ns.c
interface/: psa_sum_service_api.h
partitions/: CMakeLists.txt
partitions/sum_service_sp/: CMakeLists.txt  sum_service_sp.c  sum_service_sp.h  sum_service_sp_psa_manifest.yaml
